bindings/go/slatedb.h

uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_scan(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_scan_prefix(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_scan_prefix_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_scan_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_seqnum(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_unmark_write(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walfile_close(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walfile_id(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walfile_iterator(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walfile_metadata(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walfile_next_file(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walfile_next_id(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walfileiterator_close(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walfileiterator_next(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walreader_close(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walreader_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_walreader_list(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_writebatch_close(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_writebatch_delete(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_writebatch_merge(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_writebatch_merge_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_writebatch_put(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_writebatch_put_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_dbbuilder_new(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_dbreaderbuilder_new(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_walreader_new(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_writebatch_new(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_mergeoperator_merge(void
    
);
uint32_t ffi_slatedb_ffi_uniffi_contract_version(void
    
);