bindings/java/src/main/java/io/slatedb/UniffiLib.java

    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_scan();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_scan_prefix();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_scan_prefix_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_scan_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_seqnum();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_unmark_write();
    Short uniffi_slatedb_ffi_checksum_method_walfile_close();
    Short uniffi_slatedb_ffi_checksum_method_walfile_id();
    Short uniffi_slatedb_ffi_checksum_method_walfile_iterator();
    Short uniffi_slatedb_ffi_checksum_method_walfile_metadata();
    Short uniffi_slatedb_ffi_checksum_method_walfile_next_file();
    Short uniffi_slatedb_ffi_checksum_method_walfile_next_id();
    Short uniffi_slatedb_ffi_checksum_method_walfileiterator_close();
    Short uniffi_slatedb_ffi_checksum_method_walfileiterator_next();
    Short uniffi_slatedb_ffi_checksum_method_walreader_close();
    Short uniffi_slatedb_ffi_checksum_method_walreader_get();
    Short uniffi_slatedb_ffi_checksum_method_walreader_list();
    Short uniffi_slatedb_ffi_checksum_method_writebatch_close();
    Short uniffi_slatedb_ffi_checksum_method_writebatch_delete();
    Short uniffi_slatedb_ffi_checksum_method_writebatch_merge();
    Short uniffi_slatedb_ffi_checksum_method_writebatch_merge_with_options();
    Short uniffi_slatedb_ffi_checksum_method_writebatch_put();
    Short uniffi_slatedb_ffi_checksum_method_writebatch_put_with_options();
    Short uniffi_slatedb_ffi_checksum_constructor_dbbuilder_new();
    Short uniffi_slatedb_ffi_checksum_constructor_dbreaderbuilder_new();
    Short uniffi_slatedb_ffi_checksum_constructor_walreader_new();
    Short uniffi_slatedb_ffi_checksum_constructor_writebatch_new();
    Short uniffi_slatedb_ffi_checksum_method_mergeoperator_merge();
    Integer ffi_slatedb_ffi_uniffi_contract_version();
    
}

